--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<center>
 			<h2 class="h">O nas</h2>
 			<hr>
-			<p><b>Nasza firma zajmuje się naprawą sprzętu komputerowego, na rynku pracy działamy już od 20 lat. Świadczymy usługi na terenie całej Dębicy i okolic. Dojeżdzamy również do klienta. Zajmujemy się obsługa klientów indywidualnych oraz firm i przedsiębiorstw.</b></p>
+			<p><b>Nasza firma zajmuje się naprawą sprzętu komputerowego, na rynku pracy działamy już od 20 lat. Świadczymy usługi na terenie całego Rzeszowa i okolic. Dojeżdzamy również do klienta. Zajmujemy się obsługa klientów indywidualnych oraz firm i przedsiębiorstw.</b></p>
 			<hr>
 			<h2 class="h">Godziny otwarcia</h2>
 			<hr>
