--- a/uslugi_1.html
+++ b/uslugi_1.html
@@ -31,91 +31,91 @@
 					<th></th>
 					<th>Cena</th>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Doradzenie w wyborze komputera</td>
 					<td>-</td>
 					<td>50 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Złożenie komputera</td>
 					<td>-</td>
 					<td>150 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana pasty termo-przewodzącej</td>
 					<td>-</td>
 					<td>40 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana/Dodanie płyty głównej</td>
 					<td>-</td>
 					<td>50 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana karty graficznej</td>
 					<td>-</td>					
 					<td>35 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana zasilacza</td>
 					<td>-</td>					
 					<td>70 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana procesora</td>
 					<td>-</td>					
 					<td>50 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana/Dodanie pamięci RAM</td>
 					<td>-</td>					
 					<td>30 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana/Dodanie karty rozszerzeń</td>
 					<td>-</td>					
 					<td>30 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana/Dodanie dysku twardego</td>
 					<td>-</td>					
 					<td>30 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana/Dodanie napędów optycznych</td>
 					<td>-</td>					
 					<td>35 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Czyszczenie komputera</td>
 					<td>-</td>					
 					<td>30 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana baterii do układu CMOS (BIOS)</td>
 					<td>-</td>					
 					<td>30 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana/Modernizacja układu chłodznia</td>
 					<td>-</td>					
 					<td>40 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana/Przełożenie podzespołów do nowej obudowy</td>
 					<td>-</td>					
 					<td>120 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Sprawdzenie pamięci RAM</td>
 					<td>-</td>					
 					<td>60 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Sprawdzenie dysku twardego</td>
 					<td>-</td>					
 					<td>60 PLN</td>
-				</tr>																
+				</tr>		
 			</table>
 		</center>
 	</section>
