--- a/uslugi_2.html
+++ b/uslugi_2.html
@@ -31,87 +31,87 @@
 					<th></th>
 					<th>Cena</th>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Doradzenie w wyborze laptopa</td>
 					<td>-</td>
 					<td>30 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Czyszczenie laptopa</td>
 					<td>-</td>
 					<td>40 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana pasty termo-przewodzącej</td>
 					<td>-</td>
 					<td>50 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana klawiatury</td>
 					<td>-</td>
 					<td>60 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana inwertera</td>
 					<td>-</td>					
 					<td>90 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana/Dodanie pamięci RAM</td>
 					<td>-</td>					
 					<td>60 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana procesora</td>
 					<td>-</td>					
 					<td>70 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana uszkodzonej matrycy LCD</td>
 					<td>-</td>					
 					<td>120 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana/Dodanie dysku twardego</td>
 					<td>-</td>					
 					<td>50 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana taśmy matrycy</td>
 					<td>-</td>					
 					<td>120 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana karty WI-FI</td>
 					<td>-</td>					
 					<td>50 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana baterii do układu CMOS (BIOS)</td>
 					<td>-</td>					
 					<td>70 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana układu chłodznia</td>
 					<td>-</td>					
 					<td>100 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana napędu optycznego</td>
 					<td>-</td>					
 					<td>50 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Czyszczenie czytnika napędu optycznego</td>
 					<td>-</td>					
 					<td>60 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Sprawdzenie pamięci RAM</td>
 					<td>-</td>					
 					<td>60 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Sprawdzenie dysku twardego</td>
 					<td>-</td>					
 					<td>60 PLN</td>
