--- a/uslugi_3.html
+++ b/uslugi_3.html
@@ -31,66 +31,71 @@
 					<th></th>
 					<th>Cena</th>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Optymalizacja systemu + usuwanie wirusów</td>
 					<td>-</td>
 					<td>120 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Resetowanie hasła w systemie Windows</td>
 					<td>-</td>
 					<td>100 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Rozwiązanie problemu z uruchomieniem systemu Windows</td>
 					<td>-</td>
 					<td>90 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Instalacja systemu Operacyjnego Windows</td>
 					<td>-</td>
 					<td>80 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Instalacja Sterowników i domyślnych programów</td>
 					<td>-</td>					
 					<td>60 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Instalacja pakietu MS Office</td>
 					<td>-</td>					
 					<td>40 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Konfiguracja BIOS`u</td>
 					<td>-</td>					
 					<td>50 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Aktualizacja BIOS`u</td>
 					<td>-</td>					
 					<td>90 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Aktualizacja oprogramowania lub systemu operacyjnego</td>
 					<td>-</td>					
 					<td>60 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Odzyskiwanie utraconych danych z dysków twardych</td>
 					<td>-</td>					
 					<td>200 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Konfiguracja oprogramowania</td>
 					<td>-</td>					
 					<td>40 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Instalacja i konfiguracja systemu operacyjnego Linux</td>
 					<td>-</td>					
 					<td>120 PLN</td>
-				</tr>															
+				</tr>
+				<tr class="tr_services">
+					<td>Formatowanie dysku twardego</td>
+					<td>-</td>
+					<td>100 PLN</td>
+				</tr>
 			</table>
 		</center>
 	</section>
