--- a/uslugi_4.html
+++ b/uslugi_4.html
@@ -31,41 +31,41 @@
 					<th></th>
 					<th>Cena</th>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Konserwacja drukarki</td>
 					<td>-</td>
 					<td>140 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Konserwacja urządzenia wielofunkcyjnego</td>
 					<td>-</td>
 					<td>160 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Naprawa skanera</td>
 					<td>-</td>
 					<td>150 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Naprawa zasilania</td>
 					<td>-</td>
 					<td>100 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Czyszczenie głowicy</td>
 					<td>-</td>					
 					<td>100 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana bębna światłoczułego</td>
 					<td>-</td>					
 					<td>120 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Wymiana głowicy</td>
 					<td>-</td>					
 					<td>100 PLN</td>
-				</tr>														
+				</tr>
 			</table>
 		</center>
 	</section>
