--- a/uslugi_5.html
+++ b/uslugi_5.html
@@ -31,41 +31,41 @@
 					<th></th>
 					<th>Cena</th>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Konfiguracja Router`a</td>
 					<td>-</td>
 					<td>70 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Konfiguracja Switch`a</td>
 					<td>-</td>
 					<td>50 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Konfiguracja Acces Pointa</td>
 					<td>-</td>
 					<td>45 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Zarobienie wtyku RJ45</td>
 					<td>-</td>
 					<td>5 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Montaż szafy rackowej</td>
 					<td>-</td>					
 					<td>100 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Kosztorys modernizacji sieci komputerowej</td>
 					<td>-</td>					
 					<td>150 PLN</td>
 				</tr>
-				<tr>
+				<tr class="tr_services">
 					<td>Montaż urządzenia w szafie rackowejk</td>
 					<td>-</td>					
 					<td>60 PLN</td>
-				</tr>														
+				</tr>									
 			</table>
 		</center>
 	</section>
